--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "slicemachine": "start-slicemachine"
+    "slicemachine": "start-slicemachine",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@prismicio/client": "5.1.1",
@@ -28,12 +29,21 @@
     "stripe": "^8.216.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@types/node": "^17.0.23",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.0",
+    "babel-jest": "^28.1.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "slice-machine-ui": "^0.3.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.0",
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.6.3"
   }
 }
